--- a/package.json
+++ b/package.json
@@ -39,7 +39,14 @@
     ]
   },
   "devDependencies": {
-    "eslint": "^7.32.0",
-    "prettier": "^2.7.1"
+    "prettier": "^2.7.1",
+    "@trivago/prettier-plugin-sort-imports": "^3.3.0",
+    "eslint": "^8.21.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-react": "^7.28.0",
+    "eslint-plugin-react-hooks": "^4.3.0",
   }
 }
