--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,11 +5,11 @@
   },
   "extends": ["plugin:react/recommended", "airbnb", "prettier"],
   "parserOptions": {
+    "ecmaVersion": 6,
+    "sourceType": "module",
     "ecmaFeatures": {
-      "jsx": true
-    },
-    "ecmaVersion": "latest",
-    "sourceType": "module"
+      "modules": true
+    }
   },
   "plugins": ["react"],
   "rules": {
