--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -37,6 +37,7 @@
         "html": "ignore"
       }
     ],
-    "no-underscore-dangle": ["error", { "allow": ["_uid"] }]
+    "no-underscore-dangle": ["error", { "allow": ["_uid"] }],
+    "no-console": "off"
   }
 }
